<resources>
    <string name="app_name">Entertainment Assistant</string>

    <!--    Hints -->
    <string name="hint_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_required">Required</string>

    <!--    Actions -->
    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_undo">Undo</string>
    <string name="action_retry">Retry</string>
    <string name="action_ok">Ok</string>
    <string name="action_search">Search hint</string>
    <string name="action_manage_account">Manage account</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_with_google">Sign in with google</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_change_email">Change email</string>
    <string name="action_change_password">Change password</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_update">Update</string>
    <string name="action_edit_in_library">Edit in library</string>
    <string name="action_delete_from_library">Delete from your library</string>
    <string name="action_settings">Settings</string>

    <!--    Labels -->
    <string name="label_or">or</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_details">Details</string>
    <string name="title_create_movie">Create a movie</string>
    <string name="title_create_series">Create series</string>
    <string name="title_create_game">Create game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="label_movies">Movies</string>
    <string name="label_series">Series</string>
    <string name="label_games">Games</string>
    <string name="label_watched">Watched</string>
    <string name="label_read">Read</string>
    <string name="label_played">Played</string>
    <string name="label_to_watch">To watch</string>
    <string name="label_browse">Browse</string>
    <string name="label_to_read">To read</string>
    <string name="label_to_play">To play</string>
    <string name="label_all">All</string>
    <string name="label_also_add_to">Also add to</string>
    <string name="label_favourites">Favourites</string>
    <string name="label_poster_url">Poster URL</string>
    <string name="label_title">Title</string>
    <string name="label_year">Year</string>
    <string name="label_type">Type</string>
    <string name="label_duration">Duration</string>
    <string name="label_seasons">Seasons</string>
    <string name="label_production">Production</string>
    <string name="label_director">Director</string>
    <string name="label_writer">Writer</string>
    <string name="label_plot">Plot</string>
    <string name="label_genre">Genre</string>

    <!-- Menu labels -->
    <string name="action_add_to_watched">Add to watched</string>
    <string name="action_add_to_to_watch">Add to "to watch"</string>
    <string name="label_add_to_played">Add to played</string>
    <string name="label_add_to_to_play">Add to "to play"</string>
    <string name="action_add_to_favourites">Add to favourites</string>

    <!--    Messages -->
    <string name="message_no_internet_access">No internet access</string>
    <string name="message_check_internet_access">Check your internet access</string>
    <string name="message_sing_in_with_google_cancelled">Sign in with Google cancelled</string>
    <string name="message_registered_successfully">User registered successfully</string>
    <string name="confirmation_message_delete_account_alert">This action cannot be undone. </string>
    <string name="confirmation_message_dismiss_unsaved_changes">You will loose all unsaved changes. Are you sure you want to proceed?</string>
    <string name="message_no_results">No results</string>
    <string name="message_action_browse">Search for movies, TV series and games</string>
    <string name="message_action_search_for_movies">Search for movies</string>
    <string name="message_action_search_for_series">Search for series</string>
    <string name="message_action_search_for_games">Search for games</string>
    <string name="message_loading_data">Loading data</string>
    <string name="message_movie_created_successfully">Movie created successfully</string>
    <string name="message_series_created_successfully">Series created successfully</string>
    <string name="message_game_created_successfully">Game created successfully</string>
    <string name="message_movie_updated_successfully">Movie updated successfully</string>
    <string name="message_series_updated_successfully">Series updated successfully</string>
    <string name="message_game_updated_successfully">Game updated successfully</string>
    <string name="message_movie_saved">Movie saved</string>
    <string name="message_series_saved">Series saved</string>
    <string name="message_game_saved">Game saved</string>
    <string name="message_query_cancelled">Query cancelled</string>

    <!-- Action messages -->
    <string name="action_message_added_to_to_watch">Added to "to watch"</string>
    <string name="action_message_added_to_watched">Added to watched</string>
    <string name="action_message_added_to_to_play">Added to "to play"</string>
    <string name="action_message_added_to_played">Added to played</string>
    <string name="action_message_added_to_favourites">Added to favourites</string>
    <string name="action_message_removed_from_to_watch">Removed from "to watch"</string>
    <string name="action_message_removed_from_watched">Removed from watched</string>
    <string name="action_message_removed_from_to_play">Removed from "to play"</string>
    <string name="action_message_removed_from_played">Removed from played</string>
    <string name="action_message_removed_from_favourites">Removed from favourites</string>

    <!-- Errors -->
    <string name="error_general">An error occurred</string>
    <string name="error_getting_data">An error occurred while getting data</string>
    <string name="error_creating_movie">An error occurred while creating a movie</string>
    <string name="error_creating_series">An error occurred while creating a series</string>
    <string name="error_creating_game">An error occurred while creating a game</string>
    <string name="error_updating_movie">An error occurred while updating a movie</string>
    <string name="error_updating_series">An error occurred while updating a series</string>
    <string name="error_updating_game">An error occurred while updating a game</string>

    <!-- Dialogs, prompts -->
    <string name="title_delete_account">Delete account</string>
    <string name="title_unsaved_changes">Unsaved changes</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <!-- Suffixes and prefixes -->
    <string name="suffix_minutes">min</string>
</resources>
