<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/border_radius"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:elevation="0dp"
        android:clickable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_fragment">

            <ImageView
                android:id="@+id/account_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/account_image"

                app:layout_constraintCircleRadius="@dimen/border_radius"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_input_regular"

                android:text="User"
                android:textSize="@dimen/font_button_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_image" />

            <Button
                android:id="@+id/button_change_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/button_account_width"
                android:layout_height="wrap_content"

                android:text="@string/action_change_password"
                android:drawableLeft="@drawable/vpn_key_24"
                android:textColor="@color/colorPrimary"
                android:drawableTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/button_sign_out"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_sign_out"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/button_account_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_huge"

                app:layout_constraintBottom_toTopOf="@id/button_delete_account"
                android:text="@string/action_sign_out"
                android:drawableLeft="@drawable/sign_out_rounded"
                android:textColor="@color/colorPrimary"
                android:drawableTint="@color/colorPrimary"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_delete_account"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/button_account_width"
                android:layout_height="wrap_content"

                android:text="@string/action_delete_account"
                android:drawableLeft="@drawable/remove_circle_24"
                android:textColor="@android:color/holo_red_dark"
                android:drawableTint="@android:color/holo_red_dark"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>